fixed button alignment CSS

--- a/http/indiv.less
+++ b/http/indiv.less
@@ -19,6 +19,12 @@ div#indiv, div#ass_indiv {
   }
 }
 
+div.button-ct {
+  button {
+    vertical-align: top;
+  }
+}
+
 .btn-disabled { .btn2(@gray); }
 
 .btn2(@color) {
